--- a/proiect/acasa.html
+++ b/proiect/acasa.html
@@ -20,6 +20,10 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Babylonica&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -34,7 +38,7 @@
             <li class="active"><a href="acasa.html">Acasa</a></li>
             <li><a href="portofoliu.html">Portofoliu</a></li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="">Despre noi</a></li>
+            <li><a href="despre.html">Despre noi</a></li>
             <li><a href="">Contact</a></li>
         </ul>
     </nav>
